chat-app/src/styles.css
/* Color variables start here */
:root{
  --white:white;
  --blue:#6078EA;
  --grey:#484848;
  --lightgrey:#A7A4A4;
}
/* Color variables end here */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}


body{
  background-color: var(--blue);
  color: var(--grey);
}
.formContainer {
  background-color: var(--blue);
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.formWrapper {
  background-color: var(--white);
  border-radius: 16px;
  width: 396px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 32px 16px 48px 16px;
}

.logo {
  margin: 5% 0;
  color: var(--blue);
  font-weight: bold;
  font-size: 36px;
}
.title {
  color: var(--grey);
  font-size: 24px;
}
form {
  margin-top: 5%;
  display: flex;
  flex-direction: column;
  width: 90%;
  gap: 10px;
}
input {
  padding: 10px;
  border: 1px solid var(--lightgrey);
  border-radius: 12px;
  width: 90%;
}

.primaryBtn {
  margin: 10% 0 5% 0;
  background-color: var(--blue);
  color: var(--white);
  padding: 10px;
  border: none;
  border-radius: 24px;
  cursor: pointer;
  width: 95%;
}
.tertiaryBtn {
  background-color: transparent;
  font-weight: bold;
  font-size: 16px;
  padding: 10px;
  border: none;
  cursor: pointer;
  width: 95%;
}
label {
  display: flex;
  gap: 10px;
  color: var(--grey);
  font-size: 16px;
  cursor: pointer;
}
p {
  color: var(--grey);
  font-size: 12px;
}

nav {
  background-color:var(--grey);
  width: 100%;
}
.navbarWrapper {
  display: flex;
  flex-direction: row;
  overflow: hidden;
  color: var(--white);
}

.logoNav{
  margin: 1% 0 1% 3%;
  text-align: left;
  font-weight: bold;
  font-size: 20px;
  float: left;
  width: 80%;
}

.logOutSection{
  float:right;
  width: 20%;
  padding: none;
}

.main-container{
  background-color: var(--blue);
  height: 100vh;
  flex-direction: column;
}

.threads-bar {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 30%;
  float:left
}


.thread-header {
  float:left;
}

.thread-header-wrapper{
  background-color: var(--white);
  color: var(--grey);
  display: flex;
  flex-direction: row;
}

.thread-header-title{
  margin: 5% 3% 5% 3%;
  color: var(--grey);
  font-weight: bold;
  font-size: 16px;
  float: left;
  width: 50%;
}


.thread-list{
  display: flex;
  flex-direction: column;
  background-color: var(--white);
  height:100%;
  overflow-y: scroll;
}

.single-thread{
  display: block;
  padding: 16px;
  color: var(--grey);
  width: 100%;
  max-width: 100%;

}

.createChatSection{
  float:right;
  width: 50%;
  padding: none;
}

.chat-header{
  width: 100%;
  float:right;
}

.chat-header-wrapper {
  background-color: var(--white);
  display: flex;
  flex-direction: row;
}

.backBtn {
  color: var(--grey);
  margin: 1.28%;
  float:left;
  width: 10%;
  }

.chat-area{
  float: right;
  height: 100%;
  width: 70%;
}

.chat-header-title{
  margin: 2%;
  width: 90%;
  font-weight: bold;
  font-size: 16px;
  float: right;
}

.send-message-wrapper{
  background-color: var(--white);
  display: flex;
  flex-direction: row;
  width: 100%;
  float:right;
}

.sendBtn{
  margin: 1%;
  background-color: var(--white);
  color: var(--blue);
  padding: 5px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  width: 10%;
}

.messageInput{
  margin: 1%;
  padding: 10px;
  border: 1px solid var(--lightgrey);
  border-radius: 16px;
  width: 90%;
  color: var(--grey);
  font-weight: 600;
}

.bubbles-scrollable{
    background-color: var(--white);
    width: 100%;
    height: 88%;
    overflow-y: scroll;
}

.main-div{ height: 90%;}

